@@ -1270,6 +1270,8 @@ public interface CMMsg extends CMCommon
 	public static final int TYP_SKILLFAIL=149;
 	/** MINOR_MASK minor action code type, denoting a polymorph attack */
 	public static final int TYP_POLYMORPH=150;
+	/** MINOR_MASK minor action code type, denoting a polymorph attack */
+	public static final int TYP_ACHIEVE=151;
 
 	/** MINOR_MASK minor action code type, denoting a channel action -- 2000-2047 are channels*/
 	public static final int TYP_CHANNEL=2000; //(2000-2047 are channels)
@@ -1301,7 +1303,7 @@ public interface CMMsg extends CMCommon
 		"WROTE", "REWRITE", "WASREAD", "PREMOVE", "THINK", "STARTUP", "RPXPCHANGE",
 		"COMMANDREJECT","RECIPELEARNED", "GRAVITY", "LEGALSTATE", "NEWROOM","CAUSESINK",
 		"ENDQUEST","WINQUEST","HOLYEVENT","EMISSION", "BODYDROP", "GLANCE", "RITUAL",
-		"PUFF", "TRAIN", "BROKERADD", "NEEDRELOAD", "SKILLFAIL","POLYMORPH"
+		"PUFF", "TRAIN", "BROKERADD", "NEEDRELOAD", "SKILLFAIL","POLYMORPH","ACHIEVE"
 	};
 
 	/** Index string descriptions of all the MAJOR_MASK code MAKS_s */
