@@ -382,9 +382,10 @@ damage from materials a given material.\n\r\
 PROP_ADDDAMAGE=\
 Property   : Prop_AddDamage\n\r\
 Targets    : Items, Mobs\n\r\
-Parameters : Extra Damage percentages or amounts, the list of extra damage types\n\r\
+Parameters : [DMG PCT/AMT] ([DMG TYPE] [DMG CLASS])(; SMASK="" TMASK="")\n\r\
 Example    : 50% PIERCING\n\r\
 Example    : 5 SLASHING FROST\n\r\
+Example    : 5 SLASHING FROST ; TMASK="-RACE +ORC"\n\r\
 Description: \n\r\
 Whenever the item with this property is worn, or for the mob with \
 this property, they will do extra damage of the types specified.  \
@@ -396,7 +397,10 @@ GASSING, MELTING, STRIKING, LASERING, SONICING, DISRUPTING, STULTIFYING, CORRUPT
 SCRAPING\n\r\
 * Here are the types of damage attacks: \n\r\
 PARALYSIS, FIRE, COLD, WATER, GAS, MIND, JUSTICE, ACID, ELECTRICITY, POISON, \
-UNDEAD, DISEASE, TRAPS, WEAPONATTACK.\n\r
+UNDEAD, DISEASE, TRAPS, WEAPONATTACK.\n\r\
+\n\r\
+The extra damage can also be limited to particular targets with TMASK (see \
+AHELP ZAPPERMASK), or limited to particular wielders with SMASK.
 
 PROP_ADJUSTER=\
 Property   : Prop_Adjuster\n\r\
